--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        </li>
      </div>
    </nav>
- ////////////////////////// CONTENT ////////////////////////////////
+ <!--///////////////////////// CONTENT ////////////////////////////////-->
  <div class="container-fluid" style="margin-top: 70px;">
    <div class="row" style="background-image: url(background_image.jpg);">
          <div class="col-sm-1 col-md-1 col-lg-3">
@@ -208,12 +208,14 @@
       </div>
     </footer>
 
-   <!-- JavaScript Bootstrap Links -->
+    <!-- Custom JavaScript -->
+    <script src="script.js" type="text/javascript">
+
+    <!-- JavaScript Bootstrap Links -->
     <script src="zenscroll-latest\zenscroll-min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="script.js" type="text/javascript">
 
     </script>
 
