--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <html lang="en" dir="ltr">
 <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////-->
  <head>
-     <meta name="viewport" content="initial-scale=1.0" charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
      <title>FAIQA</title>
 
      <!-- Bootstrap css & javascript links -->
