--- a/vendors.html
+++ b/vendors.html
@@ -46,7 +46,7 @@
                 Workers
               </a>
             </li>
-            <li class="nav-item">
+            <li class="mb-3 nav-item">
               <a class="text-white nav-link border border-warning" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                 Resources
               </a>
