--- a/index.html
+++ b/index.html
@@ -78,21 +78,18 @@
  <!--///////////////////////// CONTENT ////////////////////////////////-->
  <div class="container-fluid" style="margin-top: 70px;">
    <div class="row" style="background-image: url(background_image.jpg);">
-            <div class="col-sm-1 col-md-2 col-lg-3">
+            <div class="col-sm-1 col-md-1 col-lg-3">
 
-            </div>
-            <div class="col-sm-10 col-md-8 col-lg-6">
-              <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">Are you a vendor?</p>
-              <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">Let's help you sell more, faster and with less cost!</p>
-              <div class=" row mt-4 justify-content-center">
-                <a class="learnmore pt-3 pb-3 pl-5 pr-5 btn-lg text-dark">Learn more</a>
-              </div>
-            </div>
-            <div class="col-sm-1 col-md-2 col-lg-3">
+           </div>
+           <div class="col-sm-10 col-md-10 col-lg-6">
+             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are your online construction materials procurment team</p>
+             <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
+           </div>
+           <div class="col-sm-1 col-md-1 col-lg-3">
 
-            </div>
-      </div>
-   <div class="row">
+           </div>
+    </div>
+  <div class="row">
        <div class="col-sm-12 col-md-12 col-lg-6">
          <img class="w-100 p-5" src="landing_page_img1.jpg" alt="">
        </div>
