--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">Are you a vendor?</p>
               <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">Let's help you sell more, faster and with less cost!</p>
               <div class=" row mt-4 justify-content-center">
-                <a class="learnmore pt-3 pb-3 pl-5 pr-5 btn-lg text-dark">Learn more</a>
+                <a class="learnmore text-dark pt-3 pb-3 pl-5 pr-5 btn-lg" style="border-radius: 5px; font-weight: bold; background-color: orange; cursor: pointer;">Learn more</a>
               </div>
             </div>
             <div class="col-sm-1 col-md-2 col-lg-3">
