--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////-->
  <head>
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> -->
-<!--   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, charset="utf-8"/>
- -->
-     <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" charset="utf-8"/>
+
+<!--      <meta name="apple-mobile-web-app-capable" content="yes" />
      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" /> -->
   
      <title>FAIQA</title>
 
@@ -88,7 +88,7 @@
 
            </div>
            <div class="col-sm-10 col-md-10 col-lg-6">
-             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are 11 your online construction materials procurment team</p>
+             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are 22 your online construction materials procurment team</p>
              <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
            </div>
            <div class="col-sm-1 col-md-1 col-lg-3">
