--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <div class="col-sm-1 col-md-1 col-lg-3">
 
            </div>
-           <div class="col-sm-10 col-md-10 col-lg-6">
+<!--            <div class="col-sm-10 col-md-10 col-lg-6">
              <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are 22 your online construction materials procurment team</p>
              <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
-           </div>
+           </div> -->
            <div class="col-sm-1 col-md-1 col-lg-3">
 
            </div>
