--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </nav>
  <!--///////////////////////// CONTENT ////////////////////////////////-->
  <div class="container mw-100" style="margin-top: 70px;">
-   <div class="row" style="background-image: url(background_image.jpg);">
+   <div class="row w-auto" style="background-image: url(background_image.jpg);">
             <div class="col-sm-1 col-md-1 col-lg-3">
 
            </div>
