--- a/index.html
+++ b/index.html
@@ -82,20 +82,22 @@
      </div>
    </nav>
  <!--///////////////////////// CONTENT ////////////////////////////////-->
- <div class="container mw-100" style="margin-top: 70px;">
-   <div class="row w-auto" style="background-image: url(background_image.jpg);">
-            <div class="col-sm-1 col-md-1 col-lg-3">
+  
+  <div class="row" style="margin-top: 90px; background-image: url(background_image.jpg);">
+         <div class="col-sm-1 col-md-1 col-lg-3">
 
-           </div>
-           <div class="col-sm-10 col-md-10 col-lg-6">
-             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are 1your online construction materials procurment team</p>
-             <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
-           </div>
-           <div class="col-sm-1 col-md-1 col-lg-3">
+         </div>
+         <div class="col-sm-10 col-md-10 col-lg-6">
+           <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are your online construction materials procurment team</p>
+           <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
+         </div>
+         <div class="col-sm-1 col-md-1 col-lg-3">
 
-           </div>
-    </div>
-  <div class="row">
+         </div>
+   </div>
+  
+ <div class="container-fluid" style="margin-top: 70px;">
+     <div class="row">
        <div class="col-sm-12 col-md-12 col-lg-6">
          <img class="w-100 p-5" src="landing_page_img1.jpg" alt="">
        </div>
