--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           </div>
           <div class="col-sm-10 col-md-8 col-lg-6">
-             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are your online construction materials procurment team</p>
+             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We 3 are your online construction materials procurment team</p>
              <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the
           </div>
           <div class="col-sm-1 col-md-2 col-lg-3">
