--- a/index.html
+++ b/index.html
@@ -84,18 +84,17 @@
  <!--///////////////////////// CONTENT ////////////////////////////////-->
   
  <div class="container-fluid">
-     <div class="row" style=" margin-top: 90px; background-image: url(background_image.jpg);">
-           <div class="col-sm-1 col-md-2 col-lg-3">
+     <div class="row" style="margin-top: 90px; background-image: url(background_image.jpg);">
+          <div class="col-sm-1 col-md-2 col-lg-3">
 
-           </div>
-           <div class="col-sm-10 col-md-8 col-lg-6">
-             <p style="color: #fff;font-size: 64px;line-height: 60px;font-weight: 900;">We are your online construction materials procurment team</p>
-             <p style="color: #fff;font-size: 64px;line-height: 30px;font-weight: 400;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
-             
-           </div>
-           <div class="col-sm-1 col-md-2 col-lg-3">
+          </div>
+          <div class="col-sm-10 col-md-8 col-lg-6">
+             <p style="color: #fff;font-size: 64px;line-height: 72px;font-weight: 900;">We are your online construction materials procurment team</p>
+             <p style="color: #fff;font-size: 32px;line-height: 40px;">We help you procure materials fast and track the delivery unitl it reaches the site</p>
+          </div>
+          <div class="col-sm-1 col-md-2 col-lg-3">
 
-           </div>
+          </div>
      </div>
    </div>
   
