--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--      <meta name="apple-mobile-web-app-capable" content="yes" />
      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" /> -->
-  
+
      <title>FAIQA</title>
 
      <!-- Bootstrap css & javascript links -->
@@ -82,7 +82,7 @@
      </div>
    </nav>
  <!--///////////////////////// CONTENT ////////////////////////////////-->
-  
+
  <div class="container-fluid">
      <div class="row" style="margin-top: 90px; background-image: url(background_image.jpg);">
           <div class="col-sm-1 col-md-2 col-lg-3">
@@ -97,14 +97,14 @@
           </div>
      </div>
    </div>
-  
- <div class="container-fluid" style="margin-top: 70px;">
+
+ <div class="container-fluid" style="margin-top: 10px;">
      <div class="row">
        <div class="col-sm-12 col-md-12 col-lg-6">
-         <img class="w-100 p-5" src="landing_page_img1.jpg" alt="">
+         <img class="w-100 pt-2 pb-2" src="landing_page_img1.jpg" alt="">
        </div>
        <div class="col-sm-12 col-md-12 col-lg-6">
-           <ul class="list-unstyled p-5" style="width:100%;">
+           <ul class="list-unstyled p-2" style="width:100%;">
              <div class="p-1 border border-warning rounded">
                <li>
                  <p style="color: #000;font-size: 1.5rem;font-weight: 900;">
