--- a/vendors.html
+++ b/vendors.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" charset="utf-8"/>
+
     <title>Faiqa</title>
 
     <!-- Bootstrap css & javascript links -->
