--- a/vendors.html
+++ b/vendors.html
@@ -59,7 +59,7 @@
         </div>
     </nav>
 
-    <div class="vendorsContainer">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm-12 col-md-3 col-lg-3">
               <div class="card border-dark mb-3" style="max-width: 100%;">
