--- a/vendors.html
+++ b/vendors.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" charset="utf-8"/>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" charset="utf-8"/>
     <title>Faiqa</title>
 
     <!-- Bootstrap css & javascript links -->
@@ -25,41 +24,63 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 10px; background-color: #06242a;">
-        <a class="navbar-brand" href="#" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">Faiqa</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="text-white nav-link border border-warning" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                Dashboard
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="text-white nav-link border border-warning" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                Vendors
-              </a>
-            </li>
-            <li class="nav-item">
-              <a role="button" href="workers/en.html" class="text-white nav-link border border-warning" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                Workers
-              </a>
-            </li>
-            <li class="mb-3 nav-item">
-              <a class="text-white nav-link border border-warning" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
-                Resources
-              </a>
-            </li>
-          </ul>
-          <li class="nav-item" style="margin-left: auto;">
-            <a class="text-dark logout" style="padding: 10px 15px; font-weight: bold; background-color: orange; cursor: pointer;">Log out</a>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="padding: 10px; background-color: #06242a;">
+      <a class="navbar-brand" href="http://127.0.0.1:3000/cssmenu/vendors.html" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">FAIQA</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="text-white nav-link dropdown-toggle border border-warning" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Who We Serve
+            </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Contractors</a>
+            <a class="dropdown-item" href="#">Vendors</a>
+            <a class="dropdown-item" href="#">Service Providers</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="text-white nav-link dropdown-toggle border border-warning" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Service Lines
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Residential Construction</a>
+            <a class="dropdown-item" href="#">Commerical Construction</a>
+            <a class="dropdown-item" href="#">Industrial Construction</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="text-white nav-link dropdown-toggle border border-warning" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Solutions
+          </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Materials & Equipment<br>Marketplace</a>
+              <a class="dropdown-item" href="vendors.html">Vendors & Service Providers<br>Marketplace</a>
+              <a class="dropdown-item" href="#">Contractors Marketplace</a>
+              <a class="dropdown-item" href="../workers/en.html">Workforce Marketplace</a>
+            </div>
           </li>
-        </div>
+          <li class="nav-item dropdown">
+            <a class="mb-3 text-white nav-link dropdown-toggle border border-warning" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Our Team</a>
+              <a class="dropdown-item" href="#">Resources</a>
+              <a class="dropdown-item" href="#">Careers</a>
+            </div>
+          </li>
+        </ul>
+        <li class="nav-item" style="margin-left: auto;">
+          <a class="text-dark signin" style="padding: 10px 15px; font-weight: bold; background-color: orange; cursor: pointer;">Sign in</a>
+        </li>
+      </div>
     </nav>
-
-    <div class="container-fluid">
+      <!-- /////////////////////////////////////////////////// CONTENT //////////////////////////////////// -->
+    <div class="container-fluid" style="margin-top: 150px;">
       <div class="row">
         <div class="col-sm-12 col-md-3 col-lg-3">
               <div class="card border-dark mb-3" style="max-width: 100%;">
