--- a/vendors.html
+++ b/vendors.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="padding: 10px; background-color: #06242a;">
-      <a class="navbar-brand" href="http://127.0.0.1:3000/cssmenu/vendors.html" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">FAIQA</a>
+      <a class="navbar-brand" href="index.html" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">FAIQA</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -238,15 +238,15 @@
       </div>
     </div>
     <!-- JavaScript Bootstrap Links -->
-    <!-- <script src="zenscroll-latest\zenscroll-min.js"></script> -->
+    <script src="zenscroll-latest\zenscroll-min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script type="text/javascript">
 
-    document.querySelector(".logout").addEventListener("click", function(){
-      document.querySelector(".logout").classList.add("dim");
-      setTimeout(function(){document.querySelector(".logout").classList.remove("dim");}, 150);
+    <script type="text/javascript">
+    document.querySelector(".signin").addEventListener("click", function(){
+      document.querySelector(".signin").classList.add("dim");
+      setTimeout(function(){document.querySelector(".signin").classList.remove("dim");}, 150);
     });
     //////////// Testing the Output /////////////////
     console.log(document.getElementsByName("finishingG").length);
