--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <body>
    <!-- Navigation Bar -->
    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="padding: 10px; background-color: #06242a;">
-     <a class="navbar-brand" href="http://127.0.0.1:3000/cssmenu/vendors.html" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">FAIQA</a>
+     <a class="navbar-brand" href="#" style="font-weight: bold; font-size: 1.7rem; margin-right: 30px;"><img src="helmet.png" style="margin-right: 5px;" alt="logo">FAIQA</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -193,7 +193,7 @@
             </div>
       </div>
     </div>
-    <footer class="container-fluid text-light mt-5 p-5" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658; fix-bottom">
+    <footer class="container-fluid text-light mt-5 p-5 fix-bottom" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658;">
       <div class="row">
         <div class="col-sm-12 col-md-4 col-lg-4 brdr">
           <ul class="list-unstyled">
