--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
       </div>
     </div>
-    <footer class="container-fluid text-light mt-5 p-5 mb-0" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658;">
+    <footer class="footer container-fluid text-light mt-5 p-5 mb-0" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658;">
       <div class="row">
         <div class="col-sm-12 col-md-4 col-lg-4 brdr">
           <ul class="list-unstyled">
