--- a/materials.html
+++ b/materials.html
@@ -177,7 +177,7 @@
             <!-- /////////////////////////// START CARDS ///////////////////////// -->
             <div class="row mt-4">
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card products" style="width: 18rem;">
+                <div class="card products w-100" style="width: 18rem;">
                   <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card products" style="width: 18rem;">
+                <div class="card products w-100" style="width: 18rem;">
                   <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -213,7 +213,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card products" style="width: 18rem;">
+                <div class="card products w-100" style="width: 18rem;">
                   <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -231,7 +231,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="card products" style="width: 18rem;">
+                <div class="card products w-100" style="width: 18rem;">
                   <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">First Title</h5>
