--- a/materials.html
+++ b/materials.html
@@ -130,30 +130,7 @@
             <!-- //////////// Dropdown Menu /////////////// -->
             <div class="btn-group">
               <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Brand
-              </button>
-              <div class="dropdown-menu">
-                <form class="px-4 py-3">
-                  <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                    <label class="form-check-label" for="dropdownCheck">
-                      GE
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                    <label class="form-check-label" for="dropdownCheck">
-                      Philips
-                    </label>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <!-- /////////////////////END OF DROPDOWN MENU////////// -->
-            <!-- //////////// Dropdown Menu /////////////// -->
-            <div class="btn-group">
-              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Material
+                Materials
               </button>
               <div class="dropdown-menu">
                 <form class="px-4 py-3">
@@ -167,6 +144,29 @@
                     <input type="checkbox" class="form-check-input" id="dropdownCheck">
                     <label class="form-check-label" for="dropdownCheck">
                       Switches
+                    </label>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <!-- /////////////////////END OF DROPDOWN MENU////////// -->
+            <!-- //////////// Dropdown Menu /////////////// -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Brand
+              </button>
+              <div class="dropdown-menu">
+                <form class="px-4 py-3">
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                    <label class="form-check-label" for="dropdownCheck">
+                      General Electric
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                    <label class="form-check-label" for="dropdownCheck">
+                      Philips
                     </label>
                   </div>
                 </form>
@@ -195,7 +195,7 @@
               </div>
               <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="card products w-100" style="width: 18rem;">
-                  <img class="card-img-top" src="images\electrical\lamps\lamp4.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images\electrical\lamps\lamp1.jpg" alt="Card image cap">
                   <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
