updated website files

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
            Solutions
          </a>
            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-             <a class="dropdown-item" href="#">Materials & Equipment<br>Marketplace</a>
+             <a class="dropdown-item" href="materials.html">Materials & Equipment<br>Marketplace</a>
              <a class="dropdown-item" href="vendors.html">Vendors & Service Providers<br>Marketplace</a>
              <a class="dropdown-item" href="#">Contractors Marketplace</a>
-             <a class="dropdown-item" href="../workers/en.html">Workforce Marketplace</a>
            </div>
          </li>
          <li class="nav-item dropdown">
@@ -193,7 +192,7 @@
             </div>
       </div>
     </div>
-    <footer class="footer container-fluid text-light mt-5 p-5" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658;">
+    <footer class="footer container-fluid text-light mt-5 p-5 mb-0" style="text-align: center; font-size: 1.2rem; height: 300px; background-color: #064658;">
       <div class="row">
         <div class="col-sm-12 col-md-4 col-lg-4 brdr">
           <ul class="list-unstyled">
