added mechanical materials filtering

--- a/starter_template.html
+++ b/starter_template.html
@@ -48,7 +48,7 @@
             Solutions
           </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Materials & Equipment<br>Marketplace</a>
+              <a class="dropdown-item" href="materials.html">Materials & Equipment<br>Marketplace</a>
               <a class="dropdown-item" href="vendors.html">Vendors & Service Providers<br>Marketplace</a>
               <a class="dropdown-item" href="#">Contractors Marketplace</a>
             </div>
